Finish about the method

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -125,6 +125,20 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "application.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "samplereading.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
