General workshop section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,6 +41,7 @@
         "sass/base/_utilities.scss",
         "sass/components/_button.scss",
         "sass/components/_footer.scss",
+        "sass/components/_togglepara.scss",
         "sass/layout/_banner.scss",
         "sass/layout/_content.scss",
         "sass/layout/_grid.scss",
@@ -135,6 +136,34 @@
     },
     {
       "path": "samplereading.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "workshop.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "reasons.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "faq.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "start.kit",
       "imports": [
         "navigation.kit",
         "footer.kit"
