--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,6 +40,7 @@
         "sass/base/_typography.scss",
         "sass/base/_utilities.scss",
         "sass/components/_button.scss",
+        "sass/components/_contact.scss",
         "sass/components/_footer.scss",
         "sass/components/_togglepara.scss",
         "sass/layout/_banner.scss",
@@ -206,6 +207,27 @@
     },
     {
       "path": "faqs.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "contact.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "support.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "refer.kit",
       "imports": [
         "navigation.kit",
         "footer.kit"
