Life stories section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,9 +13,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "sass"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -344,10 +342,101 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "life-stories.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/cancer.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/fran.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/leukemia.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/gayle.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/gerald.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/liz.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/rose.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/mathers.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/nan.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/patricia.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/beverly.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/maire.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
