--- a/prepros-6.config
+++ b/prepros-6.config
@@ -433,6 +433,20 @@
         "navigation-two.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "lifestories/lucille.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/pam.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
