--- a/prepros-6.config
+++ b/prepros-6.config
@@ -447,6 +447,41 @@
         "navigation-two.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "lifestories/christine.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/kendra.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/pam-pete.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lifestories/amira.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "articles.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
