--- a/prepros-6.config
+++ b/prepros-6.config
@@ -482,6 +482,20 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "lifestories/antony.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "articles/path-article.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
     }
   ],
   "projectView": {
