--- a/prepros-6.config
+++ b/prepros-6.config
@@ -496,6 +496,20 @@
         "navigation-two.kit",
         "footer-two.kit"
       ]
+    },
+    {
+      "path": "articles/new-times.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/way-journal.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
     }
   ],
   "projectView": {
