--- a/prepros-6.config
+++ b/prepros-6.config
@@ -510,6 +510,41 @@
         "navigation-two.kit",
         "footer-two.kit"
       ]
+    },
+    {
+      "path": "articles/ira-message.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/ira-growth.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/ministry-tool.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/blueprint.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/threshold.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
     }
   ],
   "projectView": {
