--- a/prepros-6.config
+++ b/prepros-6.config
@@ -545,6 +545,48 @@
         "navigation-two.kit",
         "footer-two.kit"
       ]
+    },
+    {
+      "path": "articles/no-longer-theory.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/behind-walls.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/job-training.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/target-prison.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/spiritual-tool.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "articles/experience-workshop.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
     }
   ],
   "projectView": {
