--- a/prepros-6.config
+++ b/prepros-6.config
@@ -587,6 +587,13 @@
         "navigation-two.kit",
         "footer-two.kit"
       ]
+    },
+    {
+      "path": "articles/efm-experience.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
     }
   ],
   "projectView": {
