Books and audio

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -594,6 +594,13 @@
         "navigation-two.kit",
         "footer-two.kit"
       ]
+    },
+    {
+      "path": "books-audio.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
