--- a/prepros-6.config
+++ b/prepros-6.config
@@ -601,6 +601,13 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "books.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
