finish life issues

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -650,6 +650,34 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "sexualidentity.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lgbt-benefits.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lgbt-endorse.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "lgbt-workshop.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
