Social Services complete

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -720,6 +720,55 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "rehabilitation.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "researchstudies.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "j-articles.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "resolution.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "res-benefits.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "res-endorse.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "res-articles.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
