--- a/prepros-6.config
+++ b/prepros-6.config
@@ -832,6 +832,34 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "trauma.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "tr-benefits.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "tr-endorse.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "tr-articles.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
