Contemplative Practice section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -972,6 +972,20 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "cont-benefits.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "cont-endorse.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
