--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1091,6 +1091,90 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "pro-writerstech.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "tech-benefits.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "tech-endorse.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "writ-articles.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "mind-benefits.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "mind-endorse.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "testimonials/testimonial.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "sp-testimonial.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "test-catholic.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "testimonials/test-catholic.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "testimonials/test-christdis.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
+    },
+    {
+      "path": "testimonials/test-episcopal.kit",
+      "imports": [
+        "navigation-two.kit",
+        "footer-two.kit"
+      ]
     }
   ],
   "projectView": {
