--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1308,6 +1308,27 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "southeast.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "southatlantic.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "southeasttx.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
