--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1378,6 +1378,20 @@
         "navigation.kit",
         "footer.kit"
       ]
+    },
+    {
+      "path": "northeastcanada.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
+    },
+    {
+      "path": "northeastpa.kit",
+      "imports": [
+        "navigation.kit",
+        "footer.kit"
+      ]
     }
   ],
   "projectView": {
